--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: tmxu
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -98,3 +98,7 @@ google_analytics_tracking_id:
 
 # Facebook Like
 facebook_like: false
+
+#Disqus Settings
+disqus_short_name: xutianming
+disqus_show_comment_count: true
